# cognolith

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  WEEK1_IMPLEMENTATION_COMPLETE.md  docker-compose.production.yml  docker-compose.yml  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
app/: globals.css  layout.tsx
app/dashboard/chat/: page.tsx
app/dashboard/documents/: page.tsx
app/dashboard/knowledge-graph/: page.tsx
app/dashboard/notes/: page.tsx
app/dashboard/search/: page.tsx
backend/: .dockerignore  Dockerfile  conftest.py  init.sql  requirements.txt  run.py  verify_timeouts.py
backend/alembic/versions/: 0002_email_verification_add_email_verification_codes.py  0003_hybrid_retrieval_add_trigram_indexes.py  0004_streaming_chat_add_generation_lifecycle.py
backend/app/: crud.py  main.py
backend/app/ai/: document_summary.py  embeddings.py  evaluation.py  grounding.py  http_client.py  llm.py  note_generator.py  rag.py  reranking.py  vectorstore.py
backend/app/api/: deps.py  main.py
backend/app/core/: __init__.py  cache_middleware.py  config.py  csrf.py  database.py  exceptions.py  middleware.py  rate_limit.py  security.py  timeouts.py  websocket.py
backend/app/models/: chat.py  document.py  note.py  user.py
backend/app/schemas/: __init__.py  chat.py  (+7 more)
backend/evals/: rag_cases.json
backend/scripts/: __init__.py  evaluate_rag.py  set_user_model.py
backend/tests/: test_chat_routes.py  test_chat_service.py  test_chat_source_schema.py  test_email_config.py  test_email_service.py  test_email_verification_routes.py  test_email_verification_service.py  test_grounding.py  test_lexical_retrieval.py  test_llm_config.py  test_rag_evaluation.py  test_rag_sources.py  test_reranking.py  test_search_routes.py  test_security.py  test_security_headers.py  test_token_strategy.py  test_user_ai_settings.py
config/__tests__/: api.test.ts
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/config/: api.ts
frontend/context/: GraphContext.tsx
frontend/store/: authStore.ts  chatRequestState.ts  chatStore.ts  noteStore.ts
frontend/types/: auth.ts  index.ts
lib/api/: client.ts  documents.ts  notes.ts
lib/hooks/: useChat.ts  useNetworkStatus.ts
lib/utils/: retry.ts
public/templates/: meeting-notes.json  research-notes.json
store/: chatStore.ts  documentStore.ts
types/: index.ts
(+131 files in other folders)
