[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognolith"
version = "0.1.0"
description = "The Cognolith knowledge workspace backend"
authors = [{ name = "Karthik Das" }]
license = { file = "LICENSE" }
python-requires = ">=3.12"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
py_version = 312
skip_gitignore = false
src_paths = ["backend", "app"]
known_third_party = ["alembic", "sqlalchemy"]
skip = ["alembic", "migrations", ".venv"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "alembic",
    "migrations",
    ".venv",
    "node_modules",
    ".next",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # Line too long (handled by Black)

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Imported but unused
"tests/*.py" = ["F401", "F811"]  # Allow test fixtures

[tool.basedpyright]
include = ["backend"]
exclude = ["backend/alembic"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportDeprecated = "error"
